style(undefined): Define metatags e css links

--- a/design/undefined.html
+++ b/design/undefined.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <meta name="application-name" content="IMGLite">
+    <meta name="author" content=”guilherm-hsbe”>
+    <meta name="description" content=”A simple image compressor and metadata editor”>
+    <meta name="keywords" content=”image, compressor, metadata, editor”>
+    <meta name="theme-color" content=”#”>
+    <meta name="color-scheme" content=”light”>
+    <title>IMGLite - Simple Image Tool</title>
+    <link rel="icon" href="#" type="image/x-icon" />
+
+    <!-- css -->
+    <link rel="stylesheet" href="../static/css/siimple/siimple.css">
+    <link rel="stylesheet" href="../static/css/global.css">
 </head>
 <body>
-    
+
 </body>
 </html>
