style(undefined): Adiciona font awesome

--- a/design/undefined.html
+++ b/design/undefined.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../static/css/global.css">
 </head>
 <body>
-
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/f8b51f3b83.js" crossorigin="anonymous"></script>
 </body>
 </html>
