--- a/design/undefined.html
+++ b/design/undefined.html
@@ -16,6 +16,7 @@
     <!-- css -->
     <link rel="stylesheet" href="../static/css/siimple/siimple.css">
     <link rel="stylesheet" href="../static/css/global.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +24,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <main>
+    </main>
+
+    <footer class="has-bg-black">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-full-mobile has-p-0">
+                    <h6 class="has-text-muted">More</h6>
+                    <a class="is-block has-mb-2 has-text-light has-text-highlight-hover is-clickable w-fit">Features</a>
+                    <a class="is-block has-mb-2 has-text-light has-text-highlight-hover is-clickable w-fit">Documentation</a>
+                    <a class="is-block has-mb-2 has-text-light has-text-highlight-hover is-clickable w-fit">License</a>
+                    <a class="is-block has-mb-2 has-text-light has-text-highlight-hover is-clickable w-fit">About</a>
+                </div>
+            </div>
+        </div>
+        <div class="has-pb-2 has-text-muted has-size-1" align="center">
+            &copy; 2024 <b>IMGLite</b>. All rights reserved.
+        </div>
+    </footer>
+</div>
+
+
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/f8b51f3b83.js" crossorigin="anonymous"></script>
 </body>
