style(undefined): Atualiza tipografia da página

--- a/design/undefined.html
+++ b/design/undefined.html
@@ -36,7 +36,7 @@
     <main class="container">
         <div align="center">
             <div class="has-size-8 has-weight-bold has-text-black has-mb-8">
-                A simple image <span class="bg-amber">compressor</span> and metadata editor.
+                A simple image <span class="bg-amber">compressor</span>.
             </div>
             <div class="has-size-2 has-weight-medium clr-grey-muted has-mb-8" style="max-width: 40rem;">
                 This tool <strong>supports</strong> the following image formats for compression: JPEG, PNG.
