feat(script): Inclui funções de controle do botão de upload

--- a/design/undefined.html
+++ b/design/undefined.html
@@ -44,11 +44,11 @@
 
             <!-- file-upload -->
             <div>
-                <label for="flImg" class="button button-upload has-weight-bold is-pill has-size-2">
-                    <i class="fa fa-cloud-upload has-mr-1"></i>
+                <label for="flUpload" id="lbUpload" class="button button-upload has-weight-bold is-pill has-size-2">
+                    <i id="icnUpload" class="fa fa-cloud-upload has-mr-1"></i>
                     <span>Upload file</span>
                 </label>
-                <input id="flImg" type="file" accept=".png,.jpg"
+                <input id="flUpload" type="file" accept=".png,.jpg"
                     style="display:none;" aria-label="Image file input control" aria-hidden="true"/>
             </div>
 
